--- a/WeatherApp/requirements.txt
+++ b/WeatherApp/requirements.txt
@@ -9,6 +9,7 @@ contourpy==1.0.7
 cycler==0.11.0
 daterangestr==0.0.3
 decorator==5.1.1
+dnspython==2.3.0
 experta==1.9.4
 Faker==18.3.1
 fonttools==4.39.2
@@ -26,6 +27,7 @@ openweather==0.11
 packaging==23.0
 pandas==1.5.3
 Pillow==9.4.0
+pymongo==4.3.3
 pyowm==3.3.0
 pyparsing==3.0.9
 PySocks==1.7.1
