--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,12 +89,19 @@ services:
   mongo:
     image: mongo
     container_name: mongo
+    command: mongod --auth
     networks:
       - broker-kafka
     restart: always
     environment:
+      MONGO_INITDB_DATABASE: mydatabase
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
+    ports:
+      - '27017-27019:27017-27019'
+    volumes: 
+      - mongodbdata:/data/db
+      - ./init-mongo.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
 
   mongo-express:
     image: mongo-express
@@ -112,3 +119,6 @@ services:
 networks:
   broker-kafka:
     driver: bridge
+volumes:
+  mongodbdata:
+    driver: local
